fixed pagination icons alignment

--- a/client/src/style/App/App.scss
+++ b/client/src/style/App/App.scss
@@ -31,4 +31,8 @@
       font-size: 1.1em;
     }
   }
+  .react-icon {
+    vertical-align: bottom;
+    padding-bottom: 1px;
+  }
 }
