--- a/client/src/style/Navigation/Navigation.scss
+++ b/client/src/style/Navigation/Navigation.scss
@@ -50,6 +50,7 @@
       background-color: inherit;
       cursor: pointer;
       display: flex;
+      align-items: center;
 
       @include breakpoint(mobile) {
         /* margin important for vertical align on mobile phones */
